# create_python_wheel

./: README.md
core-segmentation/: pyproject.toml
core-segmentation/core_segmentation/: functions_encoders.py  functions_get_data.py
core-segmentation/tests/: test_core_segmentation.py
